--- a/task2/task2.vcxproj
+++ b/task2/task2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4d4972ce-4f4d-438a-b7af-1f1e1de378b5}</ProjectGuid>
-    <RootNamespace>openGLprobset01</RootNamespace>
+    <ProjectGuid>{2c73b4c6-37f2-4073-80d3-03cc41353d80}</ProjectGuid>
+    <RootNamespace>task2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -155,7 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Documents\opengl\glad.c" />
+    <ClCompile Include="..\..\..\..\Documents\opengl\glad.c" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
